alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -217,7 +217,7 @@ img {
 .nav-elements .dropdown-toggle {
     font-size: 14px;
     font-weight: 500;
-    color: #404040;
+    color: #000000;
     text-decoration: none;
     font-family: var(--heading-font);
 }
@@ -304,17 +304,80 @@ img {
     width: 210px;
 }
 
-@media (min-width: 992px) {
-    .dropdown:hover .dropdown-menu {
-        opacity: 1;
-        visibility: visible;
-        transform: translateY(0);
+@media screen and (min-width:1250px) {
+    .nav-elements ul.dropdown-menu li {
+        padding: 5px 15px;
+    }
+
+    .nav-elements ul li {
+        padding: 30px 15px;
+    }
+}
+
+@media (min-width:991px) and (max-width:1250px) {
+    .nav-elements {
+        padding: 0 !important;
+    }
+
+    .nav-elements .dropdown-toggle,
+    .nav-elements ul li a {
+        font-size: 12px;
+    }
+
+    .nav-elements ul.dropdown-menu li {
+        padding: 5px 10px;
+    }
+
+    .nav-elements ul li {
+        padding: 20px 10px;
+    }
+
+    .logo img {
+        width: 140px;
+    }
+
+    .btn_login,
+    .btn_signup {
+        padding: 5px 15px;
+        font-size: 14px;
+    }
+
+    .v-navbar input[type="search"] {
+        padding: 8px;
+        text-indent: 25px;
+        font-size: 14px;
     }
 }
 
 .v-navbar .dropdown-toggle::after {
     display: none;
 }
+
+/* Default (Desktop) */
+.nav-elements .dropdown {
+    position: relative;
+}
+
+.nav-elements .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    min-width: 220px;
+    display: none;
+    background: #fff;
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
+    padding: 10px 0;
+    z-index: 999;
+}
+
+/* Show dropdown */
+.nav-elements .dropdown.open .dropdown-menu {
+    display: block;
+}
+
+/* ---------------- MOBILE FIX ---------------- */
+
 
 /* login page */
 .login-container {
@@ -652,25 +715,7 @@ img {
     font-weight: normal;
 }
 
-@media screen and (max-width: 420px) {
 
-    .login-container .login-form .sign-in-seperator,
-    .login-container .login-form .google-login-button {
-        margin: 20px 0 10px;
-    }
-
-    .login-container .login-form {
-        padding: 10px 0;
-    }
-
-    .login-container .login-form-group {
-        margin-bottom: 16px;
-    }
-
-    .login-container {
-        margin: 0;
-    }
-}
 
 #adCarousel img {
     width: 100%;
@@ -873,31 +918,7 @@ img {
     border-bottom: none;
 }
 
-@media screen and (max-width: 991px) {
-    .btn-c1 {
-        padding: 10px 20px !important;
-    }
 
-    .page_links h3 {
-        margin-bottom: 0;
-        margin-top: 15px;
-    }
-
-    .footer_blur_text h5 {
-        font-size: 85px;
-        bottom: 55px;
-    }
-
-    .footer_sec {
-        padding: 30px 0 20px
-    }
-
-    .nav-elements ul {
-        box-shadow: none;
-        background: none;
-        border-radius: 0;
-    }
-}
 
 /* footer - end */
 /* banner - start */
@@ -1469,7 +1490,52 @@ section {
     }
 }
 
-@media (max-width: 910px) {
+@media screen and (max-width: 1000px) {
+    .nav-elements {
+        padding: 0 10px;
+    }
+
+    .nav-elements ul a,
+    .nav-elements .dropdown-toggle {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 910px) {
+    .v-about .counter_parent .counter_group {
+        width: 100%;
+    }
+
+    .v-about .counter_parent h4 {
+        font-size: 17px;
+    }
+
+    .v-about .counter_parent .counter_child {
+        width: 110px;
+        height: 100px;
+    }
+
+    .v-about .counter_parent .counter_child.counter_one {
+        top: 0;
+    }
+
+    .v-about .counter_parent .counter_child.counter_two {
+        top: 15px;
+        right: 33px;
+    }
+
+    .v-about .counter_parent .counter_child.counter_three {
+        bottom: -23px;
+    }
+
+    .v-about .counter_parent .counter_child.counter_four {
+        bottom: -40px;
+        right: 38px;
+    }
+
+    .v-about .counter_parent p {
+        font-size: 14px;
+    }
 
     .navbar_links.active .nav-elements {
         top: 75px;
@@ -1510,14 +1576,33 @@ section {
         padding-bottom: 0;
     }
 
+    .nav-elements .dropdown-toggle,
     .nav-elements ul a {
         color: #000000;
+        font-size: 10px;
+    }
+
+    .nav-elements ul.dropdown-menu a {
+        font-size: 14px;
     }
 
     .heading_wrap h1 {
         font-size: 45px;
     }
 
+    .testimonial_parent {
+        padding: 50px 30px;
+        box-shadow: 0px 4px 18.6px 4px #00000024;
+    }
+
+    .testimonial_parent p {
+        font-weight: 500;
+        font-size: 20px;
+    }
+
+    .testimonial_wrap {
+        padding: 50px 0;
+    }
 
     .section_container {
         padding-left: 10px;
@@ -1537,7 +1622,7 @@ section {
         padding: 0;
         position: absolute;
         left: 0;
-        top: 98px;
+        top: 75px;
         background-color: #f6f6f6;
         width: 0px;
         z-index: 99;
@@ -1558,6 +1643,10 @@ section {
         width: 100%;
     }
 
+    .nav-elements ul .dropdown.open {
+        padding: 20px 0 0;
+    }
+
     .nav-elements ul li {
         margin-right: unset;
         width: 100%;
@@ -1565,19 +1654,11 @@ section {
         border-bottom: 1px solid #cfcfcf;
     }
 
-
-}
-
-@media screen and (max-width: 490px) {
-
-    .section_title {
-        font-size: 28px;
-    }
-
-    .count_clr.count_clr6 img {
-        width: 160px;
+    .nav-elements ul.dropdown-menu li:last-child {
+        border-bottom: none;
     }
 }
+
 
 @media screen and (max-width: 390px) {
     .logo img {
@@ -1603,9 +1684,132 @@ section {
     }
 }
 
-@media screen and (min-width: 991px) {
+@media screen and (min-width: 992px) {
     .p-xl {
         padding-left: 75px !important;
         padding-right: 75px !important;
+    }
+
+    .dropdown:hover .dropdown-menu {
+        opacity: 1;
+        visibility: visible;
+        display: block;
+        transform: translateY(0);
+    }
+}
+
+@media (max-width: 991px) {
+    .nav-elements .dropdown-menu {
+        position: static;
+        border: none;
+        box-shadow: none;
+        background: transparent;
+        padding: 0;
+        margin-top: 8px;
+    }
+
+    .nav-elements .dropdown-menu li {
+        padding: 5px 15px;
+        /* indent */
+    }
+
+    .nav-elements .dropdown-menu a {
+        padding: 10px 0;
+        display: block;
+    }
+
+    .navbar_links.active {
+        box-shadow: 1px 1px 8px -2px #0000004d;
+    }
+
+    .btn_login,
+    .btn_signup {
+        padding: 5px 15px;
+    }
+
+    .nav_mbl_icons i {
+        font-size: 22px;
+        color: var(--c1);
+    }
+
+    .logo img {
+        width: 170px;
+    }
+
+    .btn-c1 {
+        padding: 10px 20px !important;
+    }
+
+    .page_links h3 {
+        margin-bottom: 0;
+        margin-top: 15px;
+    }
+
+    .footer_blur_text h5 {
+        font-size: 85px;
+        bottom: 55px;
+    }
+
+    .footer_sec {
+        padding: 30px 0 20px;
+        border-radius: 50px 50px 0 0;
+    }
+
+    .nav-elements ul {
+        box-shadow: none;
+        background: none;
+        border-radius: 0;
+    }
+}
+
+@media screen and (max-width: 490px) {
+
+    .nav-elements .dropdown-toggle,
+    .nav-elements ul a {
+        font-size: 14px;
+    }
+
+    .nav-elements ul.dropdown-menu a {
+        font-size: 13px;
+    }
+
+    .login-container .login-form .sign-in-seperator,
+    .login-container .login-form .google-login-button {
+        margin: 20px 0 10px;
+    }
+
+    .login-container .login-form {
+        padding: 10px 0;
+    }
+
+    .login-container .login-form-group {
+        margin-bottom: 16px;
+    }
+
+    .login-container {
+        margin: 0;
+    }
+
+    .tech-icon-two {
+        right: 4%;
+        top: 10%;
+    }
+
+    .tech-icon-three {
+        left: 40%;
+        top: 42%;
+    }
+
+    .tech-icon-four {
+        bottom: 39%;
+        left: 70%;
+    }
+
+    .section_title {
+        font-size: 28px;
+    }
+
+    .count_clr.count_clr6 img {
+        width: 160px;
     }
 }
